<resources>
    <string name="app_name">Quiz App</string>
    <string name="question_number_text">Question 1 of 4</string>
    <string name="question_text1">Problem 1: What is XML?</string>
    <string name="check_box1">A markup language.</string>
    <string name="check_box2">A design language.</string>
    <string name="check_box3">A variable.</string>
    <string name="check_box4">Documentation.</string>
    <string name="question_text2">Problem 2: True or False: Strings are numbers.</string>
    <string name="question_text3">Problem 3: Define a number variable with a value of 3 and name of score: </string>
    <string name="error">int i = "'2'";</string>
    <string name="question_text4">Problem 4: The following view is a button.</string>
    <string name="trueText">True</string>
    <string name="falseText">False</string>
    <string name="submit">Submit</string>
</resources>
