<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#a4c639">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.Project_3.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="#cccccc"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/app_name"
            android:textColor="#A4C639"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:text="Question 1: What does XML stand for?"
            android:textAllCaps="true" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="19dp">


            <LinearLayout
                android:id="@+id/answerGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/answer1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:text="@string/check_box1" />

                <CheckBox
                    android:id="@+id/answer2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/check_box2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/answerGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/answerGroup1"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/answer3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:text="@string/check_box3" />

                <CheckBox
                    android:id="@+id/answer4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/check_box4" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/question_text2"
            android:textAllCaps="true" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/radioGroup_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_margin="18dp"
                    android:text="@string/trueText" />

                <RadioButton
                    android:id="@+id/radioButton_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:layout_toEndOf="@id/radioButton_1"
                    android:layout_toRightOf="@id/radioButton_1"
                    android:text="@string/falseText" />
            </RadioGroup>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/question_text3"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/declareInt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="Define variable here!" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_text4" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/radioGroup_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_margin="16dp"
                    android:text="@string/trueText" />


                <RadioButton
                    android:id="@+id/radioButton_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/radioButton_3"
                    android:layout_margin="16dp"
                    android:text="@string/falseText" />
            </RadioGroup>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_marginBottom="14dp"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="14dp"
                android:layout_toRightOf="@id/radioGroup_2"
                android:src="@drawable/android" />
        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="22dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif"
            android:onClick="submitAnswers"
            android:text="Submit" />

    </LinearLayout>
</ScrollView>